fix top-banner overlaps

--- a/frontend/scss/pages/_course.scss
+++ b/frontend/scss/pages/_course.scss
@@ -1,4 +1,5 @@
 .green-section {
+  margin-top: 60px;
   background-color: $newslab-blue;
   padding: 1.25rem 2.5rem;
   color: $color-white;
